Include PGN in GameSummaryDTO and pgn_path filtering